force-app/main/default/objects/Configuracion_Tabla_Pyatz__c/Configuracion_Tabla_Pyatz__c.object-meta.xml
<CustomObject>
    <description>Almacena las definiciones de columnas para las tablas dinámicas de levantamiento.</description>
    <label>Configuración de Tabla Pyatz</label>
    <nameField>
        <label>Nombre del Servicio</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuraciones de Tablas Pyatz</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>