force-app/main/default/objects/Configuracion_Tabla_Pyatz__c/fields/Campos_API__c.field-meta.xml
<CustomField>
    <fullName>Campos_API__c</fullName>
    <description>Lista de nombres API de los campos de Levantamiento_Tecnico__c separados por coma.</description>
    <label>Campos API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>