force-app/main/default/objects/Configuracion_Tabla_Pyatz__c/fields/Etiquetas_Columnas__c.field-meta.xml
<CustomField>
    <fullName>Etiquetas_Columnas__c</fullName>
    <description>Lista de etiquetas que verá el usuario en la tabla, separadas por coma.</description>
    <label>Etiquetas de Columnas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>