force-app/main/default/objects/Configuracion_Tabla_Pyatz__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Activa__c</columns>
    <columns>Etiquetas_Columnas__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>